chapter13/sample-serviceaccount-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-serviceaccount-pod
  namespace: default
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
  serviceAccountName: sample-serviceaccount
